# DirectX11_Yoshily9_VSC

./: CMakeLists.txt  CMakePresets.json  GameApp.cpp  GameApp.h  LICENSE  d3dApp.cpp  d3dApp.h
HLSL/: Triangle.hlsli
HLSL/Cube/: Cube_PS.hlsl
HLSL/Triangle/: Triangle_VS.hlsl
